[package]
name = "rustmp3splitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.12", features = ["derive"] }
rayon = "1.7.0"
filedescriptor = "0.8.2"
num_cpus = "1.15.0"
indicatif = "0.17.3"
crossbeam-channel = "0.5.7"
